# echolens

./: .gitignore  LICENSE.txt  README.md  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci-training.yml  ci-web.yml
docs/: metrics.md
docs/adr/: ADR-0001-monorepo-and-plane-separation.md  ADR-0002-feature-contract.md  ADR-0003-base-model.md  ADR-0004-int8-quantization.md
scripts/: download_data.py  export_filterbank.py  extend_parity_fixture.py  run_quantization.py
training/: README.md  checkpoint_best.pt  pyproject.toml
training/configs/: baseline.yaml
training/logs/: cv_results.json  final_model.csv  fold_1.csv  fold_10.csv  fold_2.csv  fold_3.csv  fold_4.csv  fold_5.csv  fold_6.csv  fold_7.csv  fold_8.csv  fold_9.csv
training/src/echolens/: evaluate.py  evaluate_onnx.py  export_onnx.py  quantize.py  train.py
training/src/echolens/data/: dataset.py
training/src/echolens/features/: augment.py  melspec.py
training/src/echolens/models/: cnn.py
training/tests/: test_dataset.py  test_features.py  test_onnx_parity.py  test_parity_reference.py  test_quantized_accuracy.py  test_smoke.py
web/: eslint.config.js  package-lock.json  package.json  vite.config.ts
web/public/models/: mel_filterbank.json  model.onnx  norm_stats.json
web/tests/fixtures/: parity_reference.npz
